fix scroll overflow

--- a/src/globals.css
+++ b/src/globals.css
@@ -14,6 +14,11 @@
     @apply bg-dark-1 text-white min-h-screen font-inter;
   }
 }
+@media (width < 750px) {
+  body {
+    overflow-y: hidden
+  }
+}
 
 @layer utilities {
   /* TYPOGRAPHY */
